# dessing_patterns_python

./: README.md  pyproject.toml
1.SOLID_design_principles/: 1.Single_responsibility.py  2.Open_closed.py
creational_patterns/1.builder/: exercise_builder_coding.py
creational_patterns/2.factory/: exercise.py
creational_patterns/3.prototype/: exercise.py
structural_patterns/3.composite/: neural_networks.py
